--- a/src/components/Menu/menu.module.scss
+++ b/src/components/Menu/menu.module.scss
@@ -1,4 +1,7 @@
 .menu {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
   margin-bottom: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -17,13 +20,12 @@
 }
 
 .menu-button {
+  min-height: 48px;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   font-size: 12px;
   color: #4a4a4a;
   background-color: #fff;
-  padding: 15px;
-  line-height: 20px;
   border: 1px solid #dfe5ec;
   cursor: pointer;
   &:hover {
@@ -36,5 +38,19 @@
     &:hover {
       background-color: #2196f3;
     }
+  }
+  &--radio {
+    appearance: none;
+    position: absolute;
+  }
+  &--text {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    line-height: 20px;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    text-align: center;
   }
 }
